--- a/ChurchResourceManagerWeb/Views/Shared/_membershipStatCards.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_membershipStatCards.cshtml
@@ -20,7 +20,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-users fa-3x"></i>
+                        <i class="fa fa-user-check fa-3x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div>Active Count</div>
@@ -36,11 +36,91 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-users fa-3x"></i>
+                        <i class="fa fa-user-slash fa-3x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div>Terminated Count</div>
                         <div class="huge">{{mscc.terminatedCount}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-male fa-4x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div>Male Count</div>
+                        <div class="huge">{{mscc.maleCount}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-female fa-4x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div>Female Count</div>
+                        <div class="huge">{{mscc.femaleCount}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-user-tie fa-3x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div>Adults Count</div>
+                        <div class="huge">{{mscc.adultsCount}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-user-ninja fa-3x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div>Youth Count</div>
+                        <div class="huge">{{mscc.youthCount}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-child fa-3x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div>Children Count</div>
+                        <div class="huge">{{mscc.childrenCount}}</div>
                     </div>
                 </div>
             </div>
