--- a/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
@@ -1,6 +1,7 @@
 ﻿<page-header page-title="Offerings Search"></page-header>
 
 <div ng-controller="offeringController as oc">
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-2"></span>
     <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
                        offering-activity-type="{{oc.activityType.All}}"
                        panel-settings="oc.offeringActivityPanelSettings"
