--- a/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
@@ -1,6 +1,7 @@
 ﻿<page-header page-title="Tithes Search"></page-header>
 
 <div ng-controller="tithingController as tc">
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
     <tithing-activity get-tithing-activity="tc.getTithingActivity(tithingActivityType)"
                       tithing-activity-type="all"
                       panel-settings="tc.tithingActivityPanelSettings"
