--- a/ChurchResourceManagerWeb/Views/Transactions/TransactionsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/TransactionsSearch.cshtml
@@ -1,5 +1,6 @@
 ﻿<page-header page-title="Transactions Search"></page-header>
 
 <div ng-controller="transactionsController as tc">
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-4"></span>
     <transactions-grid transactions="tc.transactions" get-transactions="tc.getTransactions()" open-edit-modal="tc.openEditTransactionModal(transaction)" open-delete-modal="tc.openDeleteTransactionModal(transactionId)" show-edit-delete="true"></transactions-grid>
 </div>
