Removed no-Cache

--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -1,4 +1,6 @@
 ﻿<form id="aoc.addOfferingsForm" name="aoc.addOfferingsForm" novalidate ng-submit="aoc.addOffering(aoc.Offering, aoc.addOfferingsForm)" autocomplete="off">
+    <!--Offering-->
+    
     <!--Date-->
     <div class="col-xs-10">
         <div class="form-group">
