Added Edit Offering Donation Types. Added Updated Grid. Added Delete Update Grid

--- a/ChurchResourceManagerWeb/Views/Offerings/_editOfferingModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_editOfferingModal.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-        <add-offering action="Update" offering="eoc.Offering" on-save="eoc.updateOffering(eoc.Offering)"></add-offering>
+        <add-offering action="Update" offering="eoc.Offering" on-save="eoc.updateOffering(eoc.Offering)" enums="eoc.enums"></add-offering>
 
     </div>
 </div>
