--- a/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
@@ -22,7 +22,10 @@
                            panel-settings="oc.offeringActivityPanelSettings"
                            offering-activity="oc.offeringActivity"
                            open-edit-modal="oc.openEditOfferingModal(offering, index)"
-                           open-delete-modal="oc.openDeleteOfferingModal(offeringId)"></offering-activity>
+                           open-delete-modal="oc.openDeleteOfferingModal(offeringId)"
+                           show-edit-delete="true">
+
+        </offering-activity>
     </div>
 
 </div>
