--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -49,5 +49,7 @@
         <button id="clearFormBtn" name="clearFormBtn" class="btn btn-default" type="button" ng-click="aoc.clearForm()">Clear Form</button>
         <button id="submitBtn" name="submitBtn" class="btn btn-primary" type="submit">Save</button>
     </div>
+    
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AddOfferings"></span>
 
 </form>
