--- a/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/AddOfferings.cshtml
@@ -17,6 +17,7 @@
 
     <!--Offering Activity-->
     <div style="padding-top: 10px;">
+        <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AO"></span>
         <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
                            offering-activity-type="{{oc.activityType.Today}}"
                            panel-settings="oc.offeringActivityPanelSettings"
