--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -50,6 +50,6 @@
         <button id="submitBtn" name="submitBtn" class="btn btn-primary" type="submit">Save</button>
     </div>
     
-    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AddOfferings"></span>
+    @*<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AO"></span>*@
 
 </form>
