--- a/ChurchResourceManagerWeb/Views/Tithing/_addTithe.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_addTithe.cshtml
@@ -75,6 +75,6 @@
         <button id="submitBtn" name="submitBtn" class="btn btn-primary" type="submit">Save</button>
     </div>
 
-    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
+    @*<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>*@
 
 </form>
