--- a/ChurchResourceManagerWeb/Views/Donations/AddDonations.cshtml
+++ b/ChurchResourceManagerWeb/Views/Donations/AddDonations.cshtml
@@ -13,4 +13,16 @@
             </div>
         </div>
     </div>
+    <span us-spinner="{radius:30, width:8, length: 16}"></span>
+
+    <!--Donation Activity-->
+    <donation-activity get-donation-activity="dc.getDonationActivity(donationActivityType)"
+                       donation-activity-type="{{dc.activityType.Today}}"
+                       panel-settings="dc.donationActivityPanelSettings"
+                       donation-activity="dc.donationActivity"
+                       open-edit-modal="dc.openEditDonationModal(donation, index)"
+                       open-delete-modal="dc.openDeleteDonationModal(donationId)"
+                       include-date-column="true"
+                       show-edit-delete="true">
+    </donation-activity>
 </div>
