--- a/ChurchResourceManagerWeb/Views/Donations/DonationsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Donations/DonationsSearch.cshtml
@@ -1,7 +1,7 @@
 ﻿<page-header page-title="Donations Search"></page-header>
 
 <div ng-controller="donationController as dc">
-    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-3"></span>
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AD"></span>
     <donation-activity get-donation-activity="dc.getDonationActivity(donationActivityType)"
                        donation-activity-type="{{dc.activityType.All}}"
                        panel-settings="dc.donationActivityPanelSettings"
