--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -62,7 +62,7 @@
                                 <a ng-class="{'active': hc.checkActive('AddTithes')}" ng-href="/Tithing/AddTithes">Add Tithes</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('TithesSearch')}" ng-href="/Tithing/TithesSearch">View Tithes</a>
+                                <a ng-class="{'active': hc.checkActive('TithesSearch')}" ng-href="/Tithing/TithesSearch">Tithes Search</a>
                             </li>
                         </ul>
                     </li>
@@ -117,9 +117,9 @@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('MembershipReport')}" ng-href="/Reporting/MembershipReport">Membership</a>
                             </li>
-                            <li>
+                            @*<li>
                                 <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithes</a>
-                            </li>
+                            </li>*@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
                             </li>
