Updated Offerings Search

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -76,7 +76,7 @@
                                 <a ng-class="{'active': hc.checkActive('AddOfferings')}" ng-href="/Offerings/AddOfferings">Add Offerings</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('OfferingsSearch')}" ng-href="/Offerings/OfferingsSearch">View Offerings</a>
+                                <a ng-class="{'active': hc.checkActive('OfferingsSearch')}" ng-href="/Offerings/OfferingsSearch">Offerings Search</a>
                             </li>
                         </ul>
                     </li>
@@ -120,9 +120,9 @@
                             @*<li>
                                 <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithes</a>
                             </li>*@
-                            <li>
+                            @*<li>
                                 <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
-                            </li>
+                            </li>*@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
                             </li>
