--- a/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
@@ -1,15 +1,33 @@
 ﻿<page-header page-title="Offerings Search"></page-header>
 
-<div ng-controller="offeringController as oc">
-    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AO"></span>
-    <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
-                       offering-activity-type="{{oc.activityType.All}}"
-                       panel-settings="oc.offeringActivityPanelSettings"
-                       offering-activity="oc.offeringActivity"
-                       open-edit-modal="oc.openEditOfferingModal(offering, index)"
-                       open-delete-modal="oc.openDeleteOfferingModal(offeringId)"
-                       include-date-column="true"
-                       show-edit-delete="true">
-    </offering-activity>
-</div>
+@*<div ng-controller="offeringController as oc">
+        <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-AO"></span>
+        <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
+                           offering-activity-type="{{oc.activityType.All}}"
+                           panel-settings="oc.offeringActivityPanelSettings"
+                           offering-activity="oc.offeringActivity"
+                           open-edit-modal="oc.openEditOfferingModal(offering, index)"
+                           open-delete-modal="oc.openDeleteOfferingModal(offeringId)"
+                           include-date-column="true"
+                           show-edit-delete="true">
+        </offering-activity>
+    </div>*@
 
+<div class="row">
+    <div class="col-md-12">
+        <div ng-controller="offeringController as oc">
+            <div class="col-md-12">
+                <reporting-tabs report-type="Offering" go-button="oc.getOfferingActivitySearch(searchType, startDate, endDate, familyId, memberId)" no-results-found="oc.noResults" reset-tabs="oc.resetSearch()"></reporting-tabs>
+            </div>
+            <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-OR"></span>
+            <div ng-if="oc.offeringActivity.length > 0">
+                <offering-activity panel-settings="oc.offeringActivityPanelSettings"
+                                   offering-activity="oc.offeringActivity"
+                                   include-date-column="true"
+                                   show-edit-delete="false">
+                </offering-activity>
+            </div>
+
+        </div>
+    </div>
+</div>
