--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -90,7 +90,7 @@
                                 <a ng-class="{'active': hc.checkActive('AddDonations')}" ng-href="/Donations/AddDonations">Add Donations</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.checkActive('DonationsSearch')}" ng-href="/Donations/DonationsSearch">View Donations</a>
+                                <a ng-class="{'active': hc.checkActive('DonationsSearch')}" ng-href="/Donations/DonationsSearch">Donations Search</a>
                             </li>
                         </ul>
                     </li>
@@ -118,14 +118,14 @@
                                 <a ng-class="{'active': hc.checkActive('MembershipReport')}" ng-href="/Reporting/MembershipReport">Membership</a>
                             </li>
                             @*<li>
-                                <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithes</a>
-                            </li>*@
+                                    <a ng-class="{'active': hc.checkActive('TithingReport')}" ng-href="/Reporting/TithingReport">Tithes</a>
+                                </li>*@
                             @*<li>
-                                <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
-                            </li>*@
-                            <li>
+                                    <a ng-class="{'active': hc.checkActive('OfferingReport')}" ng-href="/Reporting/OfferingReport">Offerings</a>
+                                </li>*@
+                            @*<li>
                                 <a ng-class="{'active': hc.checkActive('DonationReport')}" ng-href="/Reporting/DonationReport">Donations</a>
-                            </li>
+                            </li>*@
                             <li>
                                 <a ng-class="{'active': hc.checkActive('Transactions')}" ng-href="/Reporting/TransactionsReport">Transactions</a>
                             </li>
